--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -414,4 +414,7 @@
          For this time after the screen turns on, the Power Manager
          will not debounce light sensor readings -->
     <integer name="config_lightSensorWarmupTime">200</integer>
+
+    <dimen name="config_dialogCornerRadius">2dp</dimen>
+    <dimen name="config_buttonCornerRadius">2dp</dimen>
 </resources>
